--- a/css/asistance.css
+++ b/css/asistance.css
@@ -73,7 +73,9 @@
   }
 
   .title-asistance {
-    font-family: "Cabin Sketch", sans-serif;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
