--- a/css/contact.css
+++ b/css/contact.css
@@ -77,7 +77,9 @@
   }
 
   .title-contact {
-    font-family: "Cabin Sketch", sans-serif;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
