--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,9 @@ html {
 }
 
 body {
-  font-family: "Amatic SC", sans-serif;
-  font-weight: 700;
+  font-family: "Indie Flower", cursive;
+  font-weight: 400;
+  font-style: normal;
   background-color: var(--theme-color);
   color: var(--text-color);
   height: 100%;
@@ -29,19 +30,20 @@ section {
 
 
 .title {
-  font-family: "Cabin Sketch", sans-serif;
-  font-weight: 700;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-style: normal;
   font-size: 20px;
 }
 
 /* Desde 1024px */
  @media (min-width: 1024px) { 
   body {
-    font-size: 22px;
+    font-size: 20px;
   }
 
   .title {
-    font-size: 24px;
+    font-size: 22px;
   }
 }
 
