--- a/css/recomendations.css
+++ b/css/recomendations.css
@@ -19,7 +19,9 @@
 /* Hasta 768px */
 @media (max-width: 768px) {
   .title-recomendations {
-    font-family: "Cabin Sketch", sans-serif;
+    font-family: "Permanent Marker", cursive;
+    font-weight: 400;
+    font-style: normal;
     display: flex;
     flex-direction: column;
     margin-bottom: 15px;
