--- a/css/asistance.css
+++ b/css/asistance.css
@@ -2,10 +2,10 @@
   background-image: url("../img/fondo_nav_mobile_1.png");
   padding: 20px;
   border-radius: 7px;
-  font-weight: 600;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .asistance-form {
@@ -47,15 +47,37 @@
   border-radius: 7px;
   color: var(--text-color-inverse);
   border: 1px solid var(text-color-inverse);
-  margin-bottom: 100px;
+  margin: 20px 0 70px 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .send-button:hover {
   box-shadow: 0 0 14px var(--navbar-shallow-color);
 }
 
+.button-mobile {
+  display: none;
+  width: auto;
+}
+
+/* Desde 1024px */
+@media (max-width: 1024px) { 
+  .button-desktop {
+    display: none;
+  }
+
+  .button-mobile {
+    display: block;
+  }
+}
+
 /* Desde 1024px */
 @media (min-width: 1024px) { 
+  .button-desktop {
+    display: flex;
+  }
+
   .asistance-text {
     padding: 20px 80px;
   }
@@ -63,6 +85,10 @@
   .asistance-form input,
   .asistance-form textarea {
     width: 400px;
+  }
+
+  .button-mobile {
+    display: none;
   }
 }
 
