--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,22 +1,22 @@
 .carousel {
   height: 650px;
-  width: 800px;
+  width: 100%;
   position: relative;
-  margin-bottom: 50px;
+  margin-bottom: 35px;
 }
 
 .image {
-  height: 60%;
-  width: 100%;
+  height: 70%;
+  width: 75%;
   top: 200px;
-  left: 75%;
+  left: 42%;
   transform: translateX(-39%);
   position: absolute;
   border-radius: 25px;
 }
 
 .carousel-text {
-  padding: 0 20px;
+  padding: 0 80px;
 }
 
 .image-hided {
@@ -40,15 +40,15 @@
 @media (max-width: 1240px) {
   .carousel {
     height: 500px;
-    width: 80%;
-    margin-bottom: 120px;
+    width: 100%;
+    margin-bottom: 40px;
   }
 
   .image {
     top: 32%;
-    width: 90%;
+    width: 80%;
     height: 65%;
-    left: 50%; 
+    left: 40%; 
   }
 }
 
@@ -57,7 +57,11 @@
   .carousel {
     height: 300px;
     width: 100%;
-    margin-bottom: 25%;
+    margin-bottom: 170px;
+  }
+
+  .carousel-text {
+    padding: 0 20px;
   }
 
   .image {
@@ -71,13 +75,14 @@
 @media (max-width: 600px) {
   .carousel {
     height: 200px;
-    width: 80%;
-    margin-bottom: 190px;
+    width: 100%;
+    margin-bottom: 150px;
   }
 
   .image {
-    top: 60%;
-    width: 110%;
-    left: 49%; 
+    top: 65%;
+    height: 70%;
+    width: 80%;
+    left: 40%; 
   }
 }
