--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@ section {
   font-size: 20px;
 }
 
+button {
+  cursor: pointer;
+}
+
 /* Desde 1024px */
  @media (min-width: 1024px) { 
   body {
