--- a/css/asistance.css
+++ b/css/asistance.css
@@ -12,6 +12,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-weight: bold;
+
 }
 
 .name-group,
@@ -19,6 +21,7 @@
   display: grid;
   gap: 3px;
   margin-bottom: 15px;
+  font-weight: bold;
 }
 
 .asistance-form input,
@@ -33,6 +36,7 @@
 .asistance-text {
   display: flex;
   flex-direction: column;
+  font-weight: bold;
 }
 
 .asistance-form textarea {
